--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 }
 repositories {
     mavenCentral()
